debug mode activated, couts removed

--- a/config/core/core_graph_params.yaml
+++ b/config/core/core_graph_params.yaml
@@ -8,7 +8,7 @@ sensor_params:
 
 # Initialization
 initialization_params:
-  estimateGravityFromImu: false           # If true, the gravity is estimated in the beginning using the IMU
+  estimateGravityFromImu: true           # If true, the gravity is estimated in the beginning using the IMU
   gravityMagnitude: 9.80600               # If estimateGravityFromImu is false, this value is used as gravity
 
 # Factor Graph
