loop in tfs but otherwise works

--- a/config/excavator_specific/excavator_extrinsic_params.yaml
+++ b/config/excavator_specific/excavator_extrinsic_params.yaml
@@ -1,7 +1,5 @@
 #External Prior/Transform Input
 extrinsics:
-  cabinFrame: CABIN
-  lidarFrame: os_sensor                     #LiDAR frame name - used to lookup LiDAR-to-ExternalSensor Frame
-  gnssFrame1: GNSS_L
-  gnssFrame2: GNSS_R
-  initializeZeroYawAndPositionOfFrame: os_sensor
+  cabinFrame: atnj1
+  gnssFrame1: Prism
+  initializeZeroYawAndPositionOfFrame: atnj1
