--- a/config/core/core_extrinsic_params.yaml
+++ b/config/core/core_extrinsic_params.yaml
@@ -1,7 +1,7 @@
 #External Prior/Transform Input
 extrinsics:
-  worldFrame: world
+  worldFrame: vicon
   odomFrame: odom
-  imuFrame: imu_box_link       # IMU_CABIN_link           #Frame of IMU used in integrator - Used for lookup transform to lidarFrame
-  baseLinkFrame: BASE
-  initializeZeroYawAndPositionOfFrame: imu_box_link
+  imuFrame: imu     #imu  #Frame of IMU used in integrator - Used for lookup transform to lidarFrame
+  baseLinkFrame: atnj1
+  initializeZeroYawAndPositionOfFrame: atnj1
