--- a/config/position_graph_specific/position_graph_extrinsic_params.yaml
+++ b/config/position_graph_specific/position_graph_extrinsic_params.yaml
@@ -1,5 +1,5 @@
 #External Prior/Transform Input
 extrinsics:
-  cabinFrame: atnj1
-  gnssFrame1: Prism
+  BodyFrame: atnj1
+  positionMeasFrame: Prism
   initializeZeroYawAndPositionOfFrame: atnj1
