Meas rate variable renaming

--- a/config/position_graph_specific/position_graph_graph_params.yaml
+++ b/config/position_graph_specific/position_graph_graph_params.yaml
@@ -1,6 +1,6 @@
 # Sensor Params
 sensor_params:
-  gnssRate: 20 # Rate of the GNSS
+  positionRate: 20 # Rate of the GNSS
 
 # Noise Parameters
 noise_params:
