new topics and names, unneeded frames and params removed

--- a/config/core/core_extrinsic_params.yaml
+++ b/config/core/core_extrinsic_params.yaml
@@ -2,6 +2,6 @@
 extrinsics:
   worldFrame: world
   odomFrame: odom
-  imuFrame: imu     #imu  #Frame of IMU used in integrator - Used for lookup transform to lidarFrame
+  imuFrame: imu     #imu  #Frame of IMU used in integrator
   baseLinkFrame: atnj1
   initializeZeroYawAndPositionOfFrame: atnj1
