--- a/config/position_graph_specific/position_graph_graph_params.yaml
+++ b/config/position_graph_specific/position_graph_graph_params.yaml
@@ -1,11 +1,8 @@
 # Sensor Params
 sensor_params:
-  positionRate: 20 # Rate of the GNSS
+  positionRate: 20 # Rate of the Position input (Hz)
 
 # Noise Parameters
 noise_params:
-  ## LiDAR
-  lioPoseUnaryNoise: [ 0.25, 0.25, 0.25, 0.05, 0.05, 0.05 ] # ORDER RPY(rad) - XYZ(meters)
-  ## GNSS
-  gnssPositionUnaryNoise: 0.04 # x, y, z of global position
-  gnssHeadingUnaryNoise: 0.2   # radians
+  ## Position measurement
+  PositionMeasUnaryNoise: 0.04 # x, y, z of global position
