1mm noise on Leica Measurments

--- a/config/position_graph_specific/position_graph_graph_params.yaml
+++ b/config/position_graph_specific/position_graph_graph_params.yaml
@@ -5,4 +5,4 @@ sensor_params:
 # Noise Parameters
 noise_params:
   ## Position measurement
-  PositionMeasUnaryNoise: 0.04 # x, y, z of global position
+  PositionMeasUnaryNoise: 0.001 # Asume Leica to have mm accuracy (which it does)
