changing frames from atnj1 -> body, reference conflict

--- a/config/core/core_extrinsic_params.yaml
+++ b/config/core/core_extrinsic_params.yaml
@@ -1,7 +1,7 @@
 #External Prior/Transform Input
 extrinsics:
-  worldFrame: world
+  worldFrame: leica
   odomFrame: odom
   imuFrame: imu     #imu  #Frame of IMU used in integrator
-  baseLinkFrame: atnj1
-  initializeZeroYawAndPositionOfFrame: atnj1
+  baseLinkFrame: body
+  initializeZeroYawAndPositionOfFrame: imu
