--- a/config/position_graph_specific/position_graph_extrinsic_params.yaml
+++ b/config/position_graph_specific/position_graph_extrinsic_params.yaml
@@ -1,5 +1,4 @@
 #External Prior/Transform Input
 extrinsics:
-  BodyFrame: atnj1
+  BodyFrame: body
   positionMeasFrame: Prism
-  initializeZeroYawAndPositionOfFrame: atnj1
