--- a/config/position_graph_specific/position_graph_graph_params.yaml
+++ b/config/position_graph_specific/position_graph_graph_params.yaml
@@ -6,3 +6,4 @@ sensor_params:
 noise_params:
   ## Position measurement
   PositionMeasUnaryNoise: 0.04 # x, y, z of global position
+  RealsenseOdomPoseUnaryNoise: [ 0.25, 0.25, 0.25, 0.05, 0.05, 0.05 ] # ORDER RPY(rad) - XYZ(meters)
