adding realsense_frame to params

--- a/config/core/core_extrinsic_params.yaml
+++ b/config/core/core_extrinsic_params.yaml
@@ -5,3 +5,4 @@ extrinsics:
   imuFrame: imu     #imu  #Frame of IMU used in integrator
   baseLinkFrame: body
   initializeZeroYawAndPositionOfFrame: imu
+  realsenseFrame: camera
